dynomite/trybuild-tests/fail/incorrect-fn-path-in-skip-serializing-if.stderr
error: proc-macro derive panicked
 --> trybuild-tests/fail/incorrect-fn-path-in-skip-serializing-if.rs:3:10
  |
3 | #[derive(Attributes)]
  |          ^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("expected identifier, found keyword `true`")

error: proc-macro derive panicked
 --> trybuild-tests/fail/incorrect-fn-path-in-skip-serializing-if.rs:9:10
  |
9 | #[derive(Attributes)]
  |          ^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("expected identifier")

error: proc-macro derive panicked
  --> trybuild-tests/fail/incorrect-fn-path-in-skip-serializing-if.rs:15:10
   |
15 | #[derive(Attributes)]
   |          ^^^^^^^^^^
   |
   = help: message: called `Result::unwrap()` on an `Err` value: Error("expected identifier")

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> trybuild-tests/fail/incorrect-fn-path-in-skip-serializing-if.rs:23:38
   |
21 | #[derive(Attributes)]
   |          ---------- unexpected argument of type `&u32`
22 | struct Test4 {
23 |     #[dynomite(skip_serializing_if = "invalid_fn")]
   |                                      ^^^^^^^^^^^^
   |
note: function defined here
  --> trybuild-tests/fail/incorrect-fn-path-in-skip-serializing-if.rs:27:4
   |
27 | fn invalid_fn() -> bool {
   |    ^^^^^^^^^^

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> trybuild-tests/fail/incorrect-fn-path-in-skip-serializing-if.rs:33:38
   |
31 | #[derive(Attributes)]
   |          ---------- unexpected argument of type `&u32`
32 | struct Test5 {
33 |     #[dynomite(skip_serializing_if = "module::invalid_fn_in_module")]
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> trybuild-tests/fail/incorrect-fn-path-in-skip-serializing-if.rs:38:19
   |
38 |     pub(super) fn invalid_fn_in_module() {}
   |                   ^^^^^^^^^^^^^^^^^^^^

error[E0600]: cannot apply unary operator `!` to type `()`
  --> trybuild-tests/fail/incorrect-fn-path-in-skip-serializing-if.rs:31:10
   |
31 | #[derive(Attributes)]
   |          ^^^^^^^^^^ cannot apply unary operator `!`
   |
   = note: this error originates in the derive macro `Attributes` (in Nightly builds, run with -Z macro-backtrace for more info)
